--- a/Codigos/ini-desafio.css
+++ b/Codigos/ini-desafio.css
@@ -16,6 +16,45 @@
     text-align: center;
     
 }
+.titulo{
+    text-align: center;
+    font-size: 20px
+}
+.subtitulo{
+    text-align: center;
+}
+.img-principal{
+    text-align: center;
+    
+}
+.info{
+    display: flex;
+    margin: 5px;
+    padding: auto;
+    text-align: center;
+}
+.info div{
+    width: 40%;
+    height: 20%;
+    border: 0.1px solid black;
+}
+button{
+    border: 0.1px solid black;
+    width: 40%;
+    height: 30%;
+    background-color: #1B632B;
+    border-radius: 15px;
+}
+.recado{
+    border: 0.1px solid black;
+    width: 80%;
+    height: 40%;
+    margin: auto;
+    text-align: center;
+}
+.ate{
+    color: #2dee57;
+}
 .spacer{
     padding-bottom: 75px;
 }
