--- a/Codigos/greenDesafios.css
+++ b/Codigos/greenDesafios.css
@@ -43,7 +43,11 @@ text-align: center;
  .desafio2 p{
     margin: 5px;
 }
-
+.desafio2 img{
+    height: 100%;
+    border: 1px solid black;
+    
+}
 footer{
     width: 100%;
     background-color: #1B632B;
